fix: word-break for safari

--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,10 @@ body {
   @apply bg-gray-700 p-4 rounded-md my-1;
 }
 
+.md code {
+  word-wrap: normal;
+}
+
 .md b,
 .md strong {
   font-weight: bold;
