feat: use new bg

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ ul, ol {
 }
 
 .bg {
-  background-image: url('./assets/switzerland.webp');
+  background-image: url('./assets/banff.png');
 }
 
 .md {
